k8s/dep_broker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zmq-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zmq-broker
  template:
    metadata:
      labels:
        app: zmq-broker
    spec:
      containers:
        - name: zmq-broker
          image: zmq-broker:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: xsub
              containerPort: 5556
            - name: xpub
              containerPort: 5557
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
