k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-ws
spec:
  selector:
    app: chat-ws
  ports:
    - name: http
      port: 80
      targetPort: 8080
