k8s/service_broker.yml
apiVersion: v1
kind: Service
metadata:
  name: zmq-broker
spec:
  selector:
    app: zmq-broker
  ports:
    - name: xsub
      port: 5556
      targetPort: 5556
    - name: xpub
      port: 5557
      targetPort: 5557
